Grouping of executors hosts

--- a/azkaban-webserver/src/package/conf/azkaban.properties
+++ b/azkaban-webserver/src/package/conf/azkaban.properties
@@ -18,8 +18,8 @@ database.type=mysql
 mysql.port=3306
 mysql.host=localhost
 mysql.database=azkaban
-mysql.user=azkaban
-mysql.password=azkaban
+mysql.user=root
+mysql.password=
 mysql.numconnections=100
 
 # Velocity dev mode
@@ -52,3 +52,11 @@ cache.directory=cache
 # JMX stats
 jetty.connector.stats=true
 executor.connector.stats=true
+
+
+azkaban.use.multiple.executors=true
+azkaban.executorselector.comparator.NumberOfAssignedFlowComparator=1
+azkaban.executorselector.comparator.Memory=0
+azkaban.executorselector.comparator.LastDispatched=0
+azkaban.executorselector.comparator.CpuUsage=0
+azkaban.activeexecutor.refresh.flowinterval=1
