--- a/azkaban-execserver/src/package/conf/azkaban.properties
+++ b/azkaban-execserver/src/package/conf/azkaban.properties
@@ -11,9 +11,9 @@ azkaban.project.dir=projects
 database.type=mysql
 mysql.port=3306
 mysql.host=localhost
-mysql.database=azkaban2
-mysql.user=azkaban
-mysql.password=azkaban
+mysql.database=azkaban
+mysql.user=root
+mysql.password=
 mysql.numconnections=100
 
 # Azkaban Executor settings
