enable debug logs for web server

--- a/azkaban-webserver/src/main/resources/log4j.properties
+++ b/azkaban-webserver/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log_dir=${log4j.log.dir}
 
-log4j.rootLogger=INFO, WebServer
-log4j.logger.azkaban.webapp=INFO, WebServer
+log4j.rootLogger=DEBUG, WebServer
+log4j.logger.azkaban.webapp=DEBUG, WebServer
 log4j.logger.azkaban.webapp.servlet.AbstractAzkabanServlet=INFO, Access
 log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, Access
 log4j.additivity.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=false
