--- a/azkaban-webserver/src/main/resources/log4j.properties
+++ b/azkaban-webserver/src/main/resources/log4j.properties
@@ -1,22 +1,21 @@
-log_dir=${log4j.log.dir}
-
-log4j.rootLogger=DEBUG, WebServer
+log4j.rootLogger=DEBUG, Console
 log4j.logger.azkaban.webapp=DEBUG, WebServer
-log4j.logger.azkaban.webapp.servlet.AbstractAzkabanServlet=INFO, Access
-log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, Access
-log4j.additivity.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=false
+log4j.logger.azkaban.webapp.servlet.AbstractAzkabanServlet=INFO, R
+log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, R
 
-log4j.appender.Access=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.Access.layout=org.apache.log4j.PatternLayout
-log4j.appender.Access.File=${log_dir}/azkaban-access.log
-log4j.appender.Access.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
-log4j.appender.Access.DatePattern='.'yyyy-MM-dd
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.File=azkaban-access.log
+log4j.appender.R.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
+log4j.appender.R.MaxFileSize=1024MB
+log4j.appender.R.MaxBackupIndex=10
 
-log4j.appender.WebServer=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.WebServer=org.apache.log4j.RollingFileAppender
 log4j.appender.WebServer.layout=org.apache.log4j.PatternLayout
-log4j.appender.WebServer.File=${log_dir}/azkaban-webserver.log
+log4j.appender.WebServer.File=azkaban-webserver.log
 log4j.appender.WebServer.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
-log4j.appender.WebServer.DatePattern='.'yyyy-MM-dd
+log4j.appender.WebServer.MaxFileSize=1024MB
+log4j.appender.WebServer.MaxBackupIndex=10
 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
