--- a/azkaban-webserver/src/main/resources/log4j.properties
+++ b/azkaban-webserver/src/main/resources/log4j.properties
@@ -1,5 +1,4 @@
-log4j.rootLogger=INFO, Console
-log4j.logger.azkaban.webapp=INFO, WebServer
+log4j.rootLogger=INFO, File
 log4j.logger.azkaban.webapp.servlet.AbstractAzkabanServlet=INFO, R
 log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, R
 
@@ -10,13 +9,9 @@ log4j.appender.R.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1
 log4j.appender.R.MaxFileSize=1024MB
 log4j.appender.R.MaxBackupIndex=10
 
-log4j.appender.WebServer=org.apache.log4j.RollingFileAppender
-log4j.appender.WebServer.layout=org.apache.log4j.PatternLayout
-log4j.appender.WebServer.File=azkaban-webserver.log
-log4j.appender.WebServer.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
-log4j.appender.WebServer.MaxFileSize=1024MB
-log4j.appender.WebServer.MaxBackupIndex=10
-
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
+log4j.appender.File=org.apache.log4j.RollingFileAppender
+log4j.appender.File.layout=org.apache.log4j.PatternLayout
+log4j.appender.File.File=azkaban-webserver.log
+log4j.appender.File.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
+log4j.appender.File.MaxFileSize=1024MB
+log4j.appender.File.MaxBackupIndex=10
