--- a/azkaban-migration/src/main/resources/log4j.properties
+++ b/azkaban-migration/src/main/resources/log4j.properties
@@ -1,29 +1,32 @@
-log4j.rootLogger=INFO, Console
+log4j.rootLogger=INFO, File
 log4j.logger.azkaban.webapp=INFO, WebServer
 log4j.logger.azkaban.webapp.servlet.AbstractAzkabanServlet=INFO, R
 log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, R
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.File=azkaban-access.log
+log4j.appender.R.File=${logfile.name}/azkaban-access.log
 log4j.appender.R.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.R.MaxFileSize=102400MB
 log4j.appender.R.MaxBackupIndex=2
 
 log4j.appender.WebServer=org.apache.log4j.RollingFileAppender
 log4j.appender.WebServer.layout=org.apache.log4j.PatternLayout
-log4j.appender.WebServer.File=azkaban-webserver.log
+log4j.appender.WebServer.File=${logfile.name}/azkaban-webserver.log
 log4j.appender.WebServer.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.WebServer.MaxFileSize=102400MB
 log4j.appender.WebServer.MaxBackupIndex=2
 
 log4j.appender.ExecServer=org.apache.log4j.RollingFileAppender
 log4j.appender.ExecServer.layout=org.apache.log4j.PatternLayout
-log4j.appender.ExecServer.File=azkaban-execserver.log
+log4j.appender.ExecServer.File=${logfile.name}/azkaban-execserver.log
 log4j.appender.ExecServer.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.ExecServer.MaxFileSize=102400MB
 log4j.appender.ExecServer.MaxBackupIndex=2
 
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
+log4j.appender.File=org.apache.log4j.RollingFileAppender
+log4j.appender.File.layout=org.apache.log4j.PatternLayout
+log4j.appender.File.File=${logfile.name}/azkaban-out.log
+log4j.appender.File.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
+log4j.appender.File.MaxFileSize=102400MB
+log4j.appender.File.MaxBackupIndex=2
