--- a/azkaban-webserver/src/main/resources/log4j.properties
+++ b/azkaban-webserver/src/main/resources/log4j.properties
@@ -4,14 +4,14 @@ log4j.logger.azkaban.webapp.servlet.LoginAbstractAzkabanServlet=INFO, R
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.File=azkaban-access.log
+log4j.appender.R.File=${logfile.name}/azkaban-access.log
 log4j.appender.R.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.R.MaxFileSize=1024MB
 log4j.appender.R.MaxBackupIndex=10
 
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
-log4j.appender.File.File=azkaban-webserver.log
+log4j.appender.File.File=${logfile.name}/azkaban-webserver.log
 log4j.appender.File.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.File.MaxFileSize=1024MB
 log4j.appender.File.MaxBackupIndex=10
