Fixed few issues

--- a/azkaban-soloserver/src/main/resources/log4j.properties
+++ b/azkaban-soloserver/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=INFO, File
 
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
-log4j.appender.File.File=${logfile.name}/azkaban-solo.log
+log4j.appender.File.File=${logfile.path}/azkaban-solo.log
 log4j.appender.File.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss.SSS Z} %p [%c{1}] [Azkaban] %m%n
 log4j.appender.File.MaxFileSize=1024MB
 log4j.appender.File.MaxBackupIndex=10
