--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
   repositories {
-    mavenCentral()
     maven { url 'http://artifactory.fkinternal.com/artifactory/v1.0/artifacts/libs-snapshots-local' }
     maven { url 'http://artifactory.fkinternal.com/artifactory/v1.0/artifacts/libs-release-local' }
   }
@@ -15,8 +14,8 @@ apply plugin: 'distribution'
 
 allprojects {
   repositories {
-    mavenCentral()
-    mavenLocal()
+    maven { url 'http://artifactory.fkinternal.com/artifactory/v1.0/artifacts/libs-snapshots-local' }
+    maven { url 'http://artifactory.fkinternal.com/artifactory/v1.0/artifacts/libs-release-local' }
   }
 }
 
