--- a/build.gradle
+++ b/build.gradle
@@ -209,6 +209,10 @@ project(':azkaban-webserver') {
     }
   }
 
+  configurations.generateRestli {
+    resolutionStrategy.force 'com.sun.codemodel:codemodel:2.6'
+  }
+
   dependencies {
     compile(project(':azkaban-common'))
     compile('com.linkedin.parseq:parseq:1.3.7')
